--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Oluwatomi  Adenekan CEAMLS SAIRI Website Summer 2024 
-logo: MYA03813.jpgg
+logo: MYA03813.jpg
 description: Hi! My name is Oluwatomi Adenekan and this is my CEAMLS SAIRI Website for Summer 2024
 show_downloads: true
 google_analytics:
